--- a/.env.development.local
+++ b/.env.development.local
@@ -1,5 +1,9 @@
 # PORT
-PORT = 3000
+PORT = 3030
+
+#RCS
+REACT_APP_BOT_MANAGEMENT_BACKEND_URL = http://localhost:5001/
+
 
 # DATABASE
 DB_HOST = 127.0.0.1
