--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postinstall": "npx husky install"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
     "morgan": "^1.10.0",
+    "request": "^2.88.2",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
     "winston": "^3.8.1",
